--- a/totemApp/package.json
+++ b/totemApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "buffer": "^6.0.3",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-ble-manager": "^11.5.3",
